--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
             <version>4.0.6.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
